[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edgar-events-mcp"
version = "0.1.0"
description = "MCP server for SEC EDGAR filing events: resolved 13D activist stakes and typed 8-K/S-1/merger filings"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "EDGAR Events" }]
keywords = ["mcp", "sec", "edgar", "13d", "8-k", "filings", "finance", "activist"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["mcp>=1.2.0"]

[project.urls]
Homepage = "https://edgarevents.com"
Source = "https://github.com/fortifiedai/edgar-events-mcp"

[project.scripts]
edgar-events-mcp = "edgar_events_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/edgar_events_mcp"]
